fix allow header and method